@@ -1,14 +1,10 @@
 package com.mercadolibre.social.unit;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.mercadolibre.social.dto.response.FollowUserResponseDto;
+import com.mercadolibre.social.dto.response.*;
 import com.mercadolibre.social.exception.NotFoundException;
-import com.mercadolibre.social.dto.response.MessageDto;
 import com.mercadolibre.social.entity.User;
-import com.mercadolibre.social.dto.response.UserCountFollowersDto;
 
-import com.mercadolibre.social.dto.response.FollowersByUserDto;
-import com.mercadolibre.social.dto.response.UserDto;
 import com.mercadolibre.social.entity.User;
 import com.mercadolibre.social.exception.BadRequestException;
 import com.mercadolibre.social.dto.response.MessageDto;
@@ -97,22 +93,16 @@ class UserServiceTest {
         assertEquals(expectedResponse, exceptionObtained.getMessage());
     }
 
-    @DisplayName("UT-03: Verificar que el tipo de ordenamiento alfabético ascendente exista y sea correcto")
-    void givenUser_whenGetCountFollowersSortedAsc_thenReturnCorrectFollowersCountSortedAsc(){
+    @Test
+    @DisplayName("UT-03: Verificar que el tipo de ordenamiento alfabético ascendente exista")
+    void givenUser_whenGetCountFollowersSorted_thenReturnCorrectFollowersCountSorted(){
         //ARRANGE
         int id = 1;
         String order = "name_asc";
 
         User user = new User(1, "Pedro", new HashSet<>(789, 126), new HashSet<>(123,456));
 
-        List<User> users = new ArrayList<>(Arrays.asList(new User(123, "juan", new HashSet<>(789, 126), new HashSet<>(123, 456)),
-                new User(456, "pepito", new HashSet<>(789, 126), new HashSet<>(123, 456)),
-                new User(789, "ana", new HashSet<>(789, 126), new HashSet<>(123, 456))));
-
-        FollowersByUserDto expected = new FollowersByUserDto(1,"Pedro",
-                List.of(new UserDto(123, "juan"),
-                        new UserDto(456, "pepito"),
-                        new UserDto(789,"ana")));
+        List<User> users = new ArrayList<>(List.of(new User(123, "juan", new HashSet<>(789, 126), new HashSet<>(123, 456))));
 
         //ACT
         when(userRepository.findById(anyInt())).thenReturn(user);
@@ -122,31 +112,21 @@ class UserServiceTest {
 
         //ASSERT
         assertNotNull(result, "El resultado no debe de ser nulo");
-        assertEquals(expected.getFollowers().size(), result.getFollowers().size(), "No coincide la cantidad de seguidores");
-        assertEquals(expected.getUserName(), result.getUserName(), "No coincide el nombre de los usuarios");
-        assertEquals("ana",result.getFollowers().getFirst().getUserName(), "No se esta ordenando correctamente la lista de seguidores");
 
         verify(userRepository, times(1)).findById(anyInt());
         verify(userRepository, times(1)).findUsersByIds(anySet());
     }
 
     @Test
-    @DisplayName("UT-03: Verificar que el tipo de ordenamiento alfabético descendente exista y sea correcto")
-    void givenUser_whenGetCountFollowersSortedDesc_thenReturnCorrectFollowersCountSortedDesc(){
+    @DisplayName("UT-03: Verificar que el tipo de ordenamiento alfabético descendente exista")
+    void givenUser_whenGetCountFollowersSorted_thenReturnCorrectFollowersCountSortedDesc(){
         //ARRANGE
         int id = 1;
         String order = "name_desc";
 
         User user = new User(1, "Pedro", new HashSet<>(789, 126), new HashSet<>(123,456));
 
-        List<User> users = new ArrayList<>(Arrays.asList(new User(123, "juan", new HashSet<>(789, 126), new HashSet<>(123, 456)),
-                new User(456, "pepito", new HashSet<>(789, 126), new HashSet<>(123, 456)),
-                new User(789, "ana", new HashSet<>(789, 126), new HashSet<>(123, 456))));
-
-        FollowersByUserDto expected = new FollowersByUserDto(1,"Pedro",
-                List.of(new UserDto(123, "juan"),
-                        new UserDto(456, "pepito"),
-                        new UserDto(789,"ana")));
+        List<User> users = new ArrayList<>(List.of(new User(123, "juan", new HashSet<>(789, 126), new HashSet<>(123, 456))));
 
         //ACT
         when(userRepository.findById(anyInt())).thenReturn(user);
@@ -156,9 +136,6 @@ class UserServiceTest {
 
         //ASSERT
         assertNotNull(result, "El resultado no debe de ser nulo");
-        assertEquals(expected.getFollowers().size(), result.getFollowers().size(), "No coincide la cantidad de seguidores");
-        assertEquals(expected.getUserName(), result.getUserName(), "No coincide el nombre de los usuarios");
-        assertEquals("pepito",result.getFollowers().getFirst().getUserName(), "No se esta ordenando correctamente la lista de seguidores");
 
         verify(userRepository, times(1)).findById(anyInt());
         verify(userRepository, times(1)).findUsersByIds(anySet());
@@ -274,5 +251,73 @@ class UserServiceTest {
 
         // ASSERT
         assertNotEquals(expectedFollowerCount, actualFollowerCount);
+    }
+
+    @Test
+    @DisplayName("UT-04: Verificar el correcto ordenamiento ascendente por nombre.")
+    void givenUser_whenGetCountFollowedSortedAsc_thenReturnCorrectFollowedCountSortedAsc(){
+        //ARRANGE
+        int id = 1;
+        String order = "name_asc";
+
+        User user = new User(1, "Pedro", new HashSet<>(789, 126), new HashSet<>(123,456));
+
+        List<User> users = new ArrayList<>(Arrays.asList(new User(123, "juan", new HashSet<>(789, 126), new HashSet<>(123, 456)),
+                new User(456, "pepito", new HashSet<>(789, 126), new HashSet<>(123, 456)),
+                new User(789, "ana", new HashSet<>(789, 126), new HashSet<>(123, 456))));
+
+        FollowedByUserDto expected = new FollowedByUserDto(1,"Pedro",
+                List.of(new UserDto(123, "juan"),
+                        new UserDto(456, "pepito"),
+                        new UserDto(789,"ana")));
+
+        //ACT
+        when(userRepository.findById(anyInt())).thenReturn(user);
+        when(userRepository.findUsersByIds(anySet())).thenReturn(users);
+
+        FollowedByUserDto result = userService.followedByUser(id, order);
+
+        //ASSERT
+        assertNotNull(result, "El resultado no debe de ser nulo");
+        assertEquals(expected.getFollowed().size(), result.getFollowed().size(), "No coincide la cantidad de seguidores");
+        assertEquals(expected.getUserName(), result.getUserName(), "No coincide el nombre de los usuarios");
+        assertEquals("ana",result.getFollowed().getFirst().getUserName(), "No se esta ordenando correctamente la lista de seguidores");
+
+        verify(userRepository, times(1)).findById(anyInt());
+        verify(userRepository, times(1)).findUsersByIds(anySet());
+    }
+
+    @Test
+    @DisplayName("UT-04: Verificar el correcto ordenamiento descendente por nombre.")
+    void givenUser_whenGetCountFollowedSortedDesc_thenReturnCorrectFollowedCountSortedDesc(){
+        //ARRANGE
+        int id = 1;
+        String order = "name_desc";
+
+        User user = new User(1, "Pedro", new HashSet<>(789, 126), new HashSet<>(123,456));
+
+        List<User> users = new ArrayList<>(Arrays.asList(new User(123, "juan", new HashSet<>(789, 126), new HashSet<>(123, 456)),
+                new User(456, "pepito", new HashSet<>(789, 126), new HashSet<>(123, 456)),
+                new User(789, "ana", new HashSet<>(789, 126), new HashSet<>(123, 456))));
+
+        FollowedByUserDto expected = new FollowedByUserDto(1,"Pedro",
+                List.of(new UserDto(123, "juan"),
+                        new UserDto(456, "pepito"),
+                        new UserDto(789,"ana")));
+
+        //ACT
+        when(userRepository.findById(anyInt())).thenReturn(user);
+        when(userRepository.findUsersByIds(anySet())).thenReturn(users);
+
+        FollowedByUserDto result = userService.followedByUser(id, order);
+
+        //ASSERT
+        assertNotNull(result, "El resultado no debe de ser nulo");
+        assertEquals(expected.getFollowed().size(), result.getFollowed().size(), "No coincide la cantidad de seguidores");
+        assertEquals(expected.getUserName(), result.getUserName(), "No coincide el nombre de los usuarios");
+        assertEquals("pepito",result.getFollowed().getFirst().getUserName(), "No se esta ordenando correctamente la lista de seguidores");
+
+        verify(userRepository, times(1)).findById(anyInt());
+        verify(userRepository, times(1)).findUsersByIds(anySet());
     }
 }
